# Wire

./: .gitignore  CHAT.md  Cargo.toml  INSTRUCTIONS.md  PRODUCTION_READINESS.md  README.md  USER_GUIDE.md  benchmark_standalone.rs  chat.md  index.html  server.js  signature_benchmark_tests.patch
.github/workflows/: cross_platform.yml  rust.yml
benchmark/: Cargo.toml  README.md
benchmark/src/: main.rs
docs/: FINAL_LAUNCH_CHECKLIST.md  LAUNCH_PLAN.md  MPC_DEPLOYMENT_GUIDE.md  PRODUCTION_READINESS_VERIFICATION.md  amm_state_management.md  api_reference.md  audit_findings_template.md  audit_preparation_guide.md  audit_readiness_checklist.md  audit_scope.md  audit_test_suite.md  audit_test_vectors.md  ci_cd_setup.md  collateral_locking.md  compilation_fixes.md  cryptographic_assumptions.md  implementation_status.md  installation_guide.md  integration_guide.md  known_limitations_and_edge_cases.md  mpc_architecture.md  mpc_deployment.md  mpc_interaction.md  mpc_key_management.md  mpc_launch_instructions.md  mpc_library_selection.md  mpc_security_review.md  performance_optimization.md  production_readiness.md  release_notes.md  security_audit.md  security_model.md  security_review.md  usage_examples.md  user_guide.md
examples/: README.md  demo.sh  keypair.json  simple_transfer.rs
examples/advanced/: parallel_proof_example.rs  recursive_proof_example.rs
examples/basic/: hash_example.rs
examples/cli/: cli_demo.rs  demo.sh
examples/inputs/: transfer.json  wrapped_asset_burn.json  wrapped_asset_mint.json
examples/proofs/: transfer_proof.json  wrapped_asset_mint_proof.json
examples/wasm/: index.html  wasm_demo.js
scripts/: run_benchmarks.sh  simple_benchmark.rs
scripts/mpc/: attestation_generator.py  burn_processor.py  fee_monitor.py
src/: errors.rs  lib.rs  main.rs
src/circuits/: add_liquidity.rs  airdrop_claim.rs  airdrop_lock.rs  buy_token.rs  ico_config.rs  ico_contribute.rs  ico_failure_refund.rs  ico_success_settle.rs  liquidation.rs  ln_burn.rs  ln_mint.rs  mod.rs  native_asset_burn.rs  native_asset_create.rs  native_asset_mint.rs  pool_state.rs  remove_liquidity.rs  sell_token.rs  stablecoin_mint.rs  stablecoin_mint_v2.rs  stablecoin_redeem.rs  stablecoin_redeem_v2.rs  swap.rs  transfer.rs  transfer.rs.bak  transition.rs  wrapped_asset_burn.rs  wrapped_asset_mint.rs
src/cli/: advanced.rs  airdrop_commands.rs  amm.rs  amm_commands.rs  batch.rs  commands.rs  config.rs  constants.rs  convert.rs  ico_commands.rs  lightning.rs  mod.rs  new_commands.rs  new_commands.rs.bak  stablecoin.rs  stablecoin_commands.rs  stablecoin_v2_commands.rs  validation.rs  workflow.rs
src/core/: airdrop_types.rs  collateral_utxo.rs  constants.rs  ico_types.rs  mod.rs  proof.rs  types.rs  virtual_cpmm.rs
src/gadgets/: arithmetic.rs  comparison.rs  ed25519.rs  fee.rs  fixed_point.rs  hash.rs  merkle.rs  mod.rs  nonce.rs  nullifier.rs  signature.rs  specialized.rs
src/mpc/: attestation.rs  auth.rs  bitcoin.rs  bitcoin_security.rs  burn.rs  ceremonies.rs  cli.rs  communication.rs  core.rs  fee.rs  key_rotation.rs  lightning.rs  mod.rs  secure_storage.rs  stablecoin.rs
src/tests/: field_tests.rs  fuzz_tests.rs  hash_tests.rs  mod.rs  signature_tests.rs
src/utils/: benchmarking.rs  compare.rs  constants.rs  field.rs  hash.rs  memory_efficient.rs  merkle.rs  mod.rs  nullifier.rs  parallel_prover.rs  recursive_prover.rs  signature.rs  wallet.rs
src/utils/tests/: mod.rs  nullifier_tests.rs
src/wasm/: mod.rs  new_circuits.rs  validation.rs
tests/: arithmetic_gadget_tests.rs  audit_tests.rs  benchmark_tests.rs  compilation_test.rs  constraint_profiling_tests.rs  ed25519_gadget_tests.rs  fee_gadget_tests.rs  hash_benchmark.rs  hash_gadget_tests.rs  lib.rs  main.rs  mpc_tests.rs  native_asset_circuit_tests.rs  nullifier_gadget_tests.rs  parallel_prover_benchmark.rs  real_proof_tests.rs  recursive_prover_benchmark.rs  signature_benchmark.rs  signature_benchmark_tests.rs  signature_gadget_tests.rs  signature_gate_count.rs  signature_profiling_tests.rs  transfer_circuit_tests.rs  wrapped_asset_burn_circuit_tests.rs  wrapped_asset_mint_circuit_tests.rs
tests/audit/: amm_edge_cases.rs  edge_cases.rs  enhanced_fuzz.rs  fuzz.rs  integration.rs  mod.rs  negative_tests.rs  performance.rs  security_properties.rs  stablecoin_edge_cases.rs
tests/integration/: benchmarks.rs  lifecycle_tests.rs
tests/integration_tests/: amm_test.rs  lightning_test.rs  mod.rs  stablecoin_test.rs
tests/mpc/: attestation_test.rs  burn_test.rs  core_test.rs  fee_test.rs
writer/: tasks.md  thing.md
