[package]
name = "wire_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
# Plonky2 and core dependencies
plonky2 = "1.0.2"
plonky2_field = "1.0.0"
plonky2_util = "1.0.0"

# Cryptographic libraries
ed25519-dalek = "2.0.0"
sha2 = "0.10.7"
poseidon-rs = "0.0.8"
hex = "0.4.3"
rand = "0.8.5"

# Serialization
serde = { version = "1.0.183", features = ["derive"] }
bincode = "1.3.3"
serde_json = "1.0.104"
serde-wasm-bindgen = { version = "0.5.0", optional = true }

# Logging and error handling
log = "0.4.19"
env_logger = "0.10.0"
thiserror = "1.0.44"
anyhow = "1.0.75"

# CLI
clap = { version = "4.3.19", features = ["derive"] }

# Parallel processing
rayon = "1.8.0"
num_cpus = "1.16.0"

# WASM support
wasm-bindgen = { version = "0.2.87", optional = true }
js-sys = { version = "0.3.64", optional = true }
web-sys = { version = "0.3.64", features = [
    "console",
    "Window",
    "Document",
    "HtmlElement",
], optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }

[lib]
name = "wire_lib"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[test]]
name = "integration_benchmarks"
path = "tests/integration/benchmarks.rs"

[[bin]]
name = "wire"
path = "src/main.rs"

[[bin]]
name = "simple_benchmark"
path = "scripts/simple_benchmark.rs"

[[bin]]
name = "benchmark_standalone"
path = "benchmark_standalone.rs"

[[bin]]
name = "wire_benchmark"
path = "benchmark/src/main.rs"

[features]
default = []
wasm = ["wasm-bindgen", "js-sys", "web-sys", "console_error_panic_hook", "serde-wasm-bindgen"]
audit-tests = ["rand/std_rng"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
