[package]
name = "wire_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
# Plonky2 and core dependencies
plonky2 = "1.0.2"
plonky2_field = "1.0.0"
plonky2_util = "1.0.0"

# Cryptographic libraries
ed25519-dalek = "2.0.0"
sha2 = "0.10.9"
sha1 = "0.10.6"
poseidon-rs = "0.0.8"
hex = "0.4.3"
rand = "0.8.5"
bip39 = "2.0.0"
slip10 = "0.4.3"
hmac = "0.12.1"
aes-gcm = "0.10.3"
pbkdf2 = "0.12.2"
qrcode = "0.12.0"

# MPC libraries
uuid = { version = "1.4.1", features = ["v4", "serde"] }
tokio = { version = "1.29.1", features = ["full"] }
tonic = "0.9.2"
prost = "0.11.9"
protobuf = "3.2.0"

# Serialization
serde = { version = "1.0.183", features = ["derive"] }
bincode = "1.3.3"
serde_json = "1.0.104"
serde-wasm-bindgen = { version = "0.5.0", optional = true }
base32 = "0.5.1"
serde_arrays = "0.1.0"

# Logging and error handling
log = "0.4.19"
env_logger = "0.11.8"
thiserror = "1.0.44"
anyhow = "1.0.75"

# Testing
tempfile = "3.8.1"
chrono = "0.4"

# CLI
clap = { version = "4.3.19", features = ["derive"] }

# Parallel processing
rayon = "1.8.0"
num_cpus = "1.16.0"

# WASM support
wasm-bindgen = { version = "0.2.87", optional = true }
js-sys = { version = "0.3.64", optional = true }
web-sys = { version = "0.3.64", features = [
    "console",
    "Window",
    "Document",
    "HtmlElement",
], optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
num-traits = "0.2.19"

[lib]
name = "wire_lib"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[test]]
name = "integration_benchmarks"
path = "tests/integration/benchmarks.rs"

[[bin]]
name = "wire"
path = "src/main.rs"

[[bin]]
name = "simple_benchmark"
path = "scripts/simple_benchmark.rs"

[[bin]]
name = "benchmark_standalone"
path = "benchmark_standalone.rs"

[[bin]]
name = "wire_benchmark"
path = "benchmark/src/main.rs"

[features]
default = []
# The wasm feature is defined but not enabled by default
wasm = ["wasm-bindgen", "js-sys", "web-sys", "console_error_panic_hook", "serde-wasm-bindgen"]
audit-tests = ["rand/std_rng"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
